# pyrust-optimizer

./: .cursorrules  .gitignore  Makefile  PyRust-Optimizer-Dev.code-workspace  README.md  README.txt  TRANSPARENCY_DESIGN.md  WORKFLOW_ANALYSIS.md  pyproject.toml  pyrust  setup_dev.sh  test_transparent.py
data/: __init__.py
docs/: # 🚀 **REVOLUTIONARY FOR 0 CENTS - LET'S
examples/: data_processing_bottleneck.py  image_processing_bottleneck.py
examples/optimized/: Cargo.toml  README.md  __init__.py
examples/optimized/src/: lib.rs
src/: __init__.py
src/analyzer/: ast_analyzer.py
src/cli/: __init__.py  commands.py  handlers.py  main.py
src/generator/: rust_generator.py
src/profiler/: data_collector.py  hotspot_detector.py
src/runtime/: pyo3_integration.py
src/transparency/: auto_compiler.py  import_guards.py  transparent_cli.py
